force-app/main/default/objects/Agreement__c/Agreement__c.object-meta.xml
<CustomObject>
    <description>This object has master detail relationship to Staff and each staff has to have at least one agreement to get hired. This object will include information about total payments, earnings and other information about this agreement period only.</description>
    <label>Agreement</label>
    <nameField>
        <label>Name on the Agreement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>