force-app/main/default/objects/Agreement__c/fields/Hire_Type__c.field-meta.xml
<CustomField>
    <fullName>Hire_Type__c</fullName>
    <label>Hire Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
                <default>true</default>
                <label>Volunteer</label>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>