force-app/main/default/objects/Agreement__c/fields/Related_Staff__c.field-meta.xml
<CustomField>
    <fullName>Related_Staff__c</fullName>
    <inlineHelpText>Staff that this agreement is bind to</inlineHelpText>
    <label>Related Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>