force-app/main/default/objects/Agreement__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <formula>IF(  ISPICKVAL(Related_Staff__r.Tax_Eligibility__c, &apos;Eligible&apos;)  , true, false)</formula>
    <label>SSN</label>
    <type>Checkbox</type>
</CustomField>