force-app/main/default/objects/Agreement__c/fields/Total_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Total_Earnings__c</fullName>
    <formula>Total_Work_Units__c *  Work_Unit_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>