force-app/main/default/objects/Agreement__c/fields/Total_Work_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Units__c</fullName>
    <inlineHelpText>Shows total work units that are within this agreement date range only</inlineHelpText>
    <label>Total Work Units</label>
    <summarizedField>Work_Unit__c.Work_Unit__c</summarizedField>
    <summaryForeignKey>Work_Unit__c.Staff_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>