force-app/main/default/objects/Agreement__c/fields/Upcoming_Payment__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Payment__c</fullName>
    <formula>Total_Earnings__c -  Total_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upcoming Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>