force-app/main/default/objects/Agreement__c/fields/Work_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Work_Unit_Rate__c</fullName>
    <inlineHelpText>Rate Per Work Unit</inlineHelpText>
    <label>Work Unit Rate</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>