force-app/main/default/objects/Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Earnings__c</columns>
    <columns>Total_Payments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>