force-app/main/default/objects/Agreement__c/listViews/Volunteers.listView-meta.xml
<ListView>
    <fullName>Volunteers</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Work_Unit_Rate__c</columns>
    <columns>Total_Earnings__c</columns>
    <columns>Total_Payments__c</columns>
    <columns>Upcoming_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Teacher,Assistant</value>
    </filters>
    <filters>
        <field>SSN__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Volunteers</label>
</ListView>